[project]
name = "dabo-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dabo",
]

[tool.uv]
dev-dependencies = [
    "black>=24.10.0",
    "ipython>=8.30.0",
    "isort>=5.13.2",
    "pytest-pudb>=0.7.0",
    "ruff>=0.8.1",
]

[tool.uv.sources]
dabo = { path = "../dabo", editable = true }
